minikube_istio_https/gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: fruits-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - apple.fruits.com
  - port:
      number: 443
      name: https
      protocol: HTTPS
    tls:
      mode: SIMPLE
      credentialName: fruits-credential
      #serverCertificate: tls.crt
      #privateKey: tls.key
    hosts:
    - banana.fruits.com
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: apple-service
spec:
  hosts:
  - apple.fruits.com
  gateways:
  - fruits-gateway
  http:
  - match:
    - uri:
        exact: /
    route:
    - destination:
        host: apple-service
        port:
          number: 5678
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: banana-service
spec:
  hosts:
  - banana.fruits.com
  gateways:
  - fruits-gateway
  http:
  - match:
    - uri:
        exact: /
    route:
    - destination:
        host: banana-service
        port:
          number: 5678
